--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,8 @@
 theme: jekyll-theme-primer
 title: KSM Tozammel Hossain
+plugins:
+   - jekyll-mentions
+   - jemoji
+   - jekyll-redirect-from
+   - jekyll-sitemap
+   - jekyll-feed
